# Untitled_game

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: EBO.cpp.C5B8E81AE6AB32C8.idx  EBO.h.CE0F3D0E09B6EC57.idx  VAO.cpp.A3BC72FECDA49B42.idx  VAO.h.B21C559CC9A6AED7.idx  VBO.cpp.F49FB85F103B517F.idx  VBO.h.F35A6A682CB5FF8B.idx  glad.c.90BD4FAFBBF71657.idx  glad.h.DBFB800327969936.idx  main.cpp.733E5D2DA80D3355.idx  shaderClass.cpp.BF0E0AB67ECE3271.idx  shaderClass.h.FC9060827282AC5D.idx
Shaders/: default.frag.glsl  default.vert.glsl  light.vert.glsl
include/: Camera.h  EBO.h  Mesh.h  Texture.h  VAO.h  VBO.h  shaderClass.h
include/glad/: glad.h
shaders/: default.vert.glsl
src/: Camera.cpp  EBO.cpp  Mesh.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
